[package]
name = "shuttle-s3-te"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
aws-config = { version = "1.1.8", features = ["behavior-version-latest"] }
aws-credential-types = { version = "1.1.8", features = ["hardcoded-credentials"] }
aws-sdk-s3 = { version = "1.23.0", features = ["behavior-version-latest"] }
axum = { version = "0.7.4", features = ["multipart", "macros"] }
image = "0.25.1"
serde = { version = "1.0.197", features = ["derive"] }
shuttle-axum = "0.43.0"
shuttle-runtime = "0.43.0"
thiserror = "1.0.58"
tokio = "1.28.2"
tracing = "0.1.40"
